# NoMoreFoodWaste

./: bun.lockb  package-lock.json  package.json  tailwind.config.js
.github/workflows/: rust.yml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile
backend/.sqlx/: query-38f390c51d9d0b7e38fddc852bbcce7cfa8882cde20272f60d089d3a7ef920ce.json  query-45b169f125a62704ee8e43cda69d49e4438139908a83a06f18add3c2f6c1605a.json  query-7d0fcdcf74c4970862d92023cfff30b232de31e3ecec124a8d75277f0f2224a9.json  query-95342f0037f331f9f5cda08d3c5d4293bd25da4dc1528ad72bce1398e90876c6.json  query-a304bd0f2dfaf83eadb05c8365b1ebc54f5b0e8ad412089a68513fbc5fc94050.json  query-d2f6af12e9b5dba84cdfbfe0dccb6834cf8426fef4aa11023f3fb46129f893dc.json  query-fdd30c9182b9e891ae1362046407ce80917b4a6dbd67661e723ad0a12401c6a6.json
backend/src/: api_service.rs  database.rs  main.rs
backend/src/Schema/: cacheTable.sql  userFood.sql
frontend/: Dockerfile  bun.lockb  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/Components/: LogoText.tsx  NiceLookingbox.tsx
frontend/src/Components/Card/: Card.tsx
frontend/src/Components/FoodTable/: FoodTable.tsx  TableRow.tsx
frontend/src/Components/Footer/: Footer.tsx
frontend/src/Components/Header/: Header.tsx
frontend/src/Components/LoginForm/: LoginForm.tsx  signUpForm.tsx
frontend/src/Components/Navbar/: HamburgerNavbar.tsx  Navbar.tsx
frontend/src/Components/Pages/: AboutPage.tsx  (+7 more)
src/: App.tsx  index.css
src/Components/Header/: Header.tsx
src/Components/LoginForm/: LoginForm.tsx
src/Components/Navbar/: Navbar.tsx
src/Components/Pages/: AboutPage.tsx  CustomerPage.tsx  HomePage.tsx  LoginPage.tsx
