[package]
name = "FoodWasteApi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
poem = "2.0.0"
actix-web = "4"
poem-openapi = "4.0.0"
tokio = { version = "1.36.0", features = ["full"] }
serde = "1.0.197"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
