[package]
name = "food-waste_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
poem = "2.0.0"
actix-web = "4"
poem-openapi = {version = "4.0.0", features = ["swagger-ui"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = "1.0.197"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde_json = { version = "1.0.73", default-features = false, features = ["alloc"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres"] }
bcrypt = "0.15.0"
regex = "1.10.3"
